minor css improvements on mobile footer display - still a scroll to fix

--- a/src/style.css
+++ b/src/style.css
@@ -397,6 +397,10 @@
     list-style: none;
   }
 
+  #git-link {
+    margin-left: auto;
+  }
+
   #git-link:visited {
     color: #607b96;
   }
@@ -1019,6 +1023,12 @@
       width: 100vw;
       background-color: #010c15;
       border-top: 1px solid #607b96;
+    }
+
+
+
+    #bottom-navbar li:first-of-type {
+      width: auto;
     }
 
     #bottom-navbar li {
